
Updated Almost Unified.
Updated Applied Energistics 2.
Updated Balm.
Updated Cobblegen Galore.
Updated Create Sifting.
Updated Cucumber Library.
Updated FTB Library (Forge).
Updated Generator Galore.
Updated GuideME.
Updated JourneyMap.
Updated Just Enough Resources (JER).
Updated Mystical Agradditions.
Updated Mystical Agriculture.
Updated Puzzles Lib [Forge & Fabric].
Updated Sophisticated Backpacks.
Updated Sophisticated Core.
Updated Sophisticated Storage.

Added quests for blaze burner and brass.
Added the ability to obtain a blaze burner by left clicking a nether portal with an empty one.
Added Andesite Mesh & Gravel Create Sifting Recipe.

https://www.youtube.com/watch?v=t0Wzn9a5tWw

1.21.1-1.5-Beta | "Immersive Engineering Update"
Added Immersive Engineering.

Updated Apothic Attributes.
Updated Balm.
Updated ModernFix.
Updated Pam's HarvestCraft 2 Nerf.
Updated Sophisticated Backpacks.
Updated Sophisticated Core.
Updated Sophisticated Storage.
Updated Waystones.

Added Andesite Mesh & Grass Block Create Sifting Recipe (for pebbles and Pam's HarvestCraft gardens).
Added Andesite Mesh & Dirt Waterlogged Create Sifting Recipe (for rare sea treasures).
Doubled wire output in Immersive Engineering metal press to incentivize user to get metal press (beyond cheaper Create Saw).
Added Mystical Agriculture Seeds to Garden Cloche.
Added Mystical Agriculture Mystical Fertilizer to Garden Cloche Fertilizers.
Added Farmer's Delight Tomato and Cabbage to Garden Cloche.
Changed Fire Agglomeratio Recipe to make easier early game lava.

Started Immersive Engineering questline.
Added to Pam's Harvestcraft Questline.
Added quests in Create chapter (rose quartz, electron tube, deployer, precision mechanism, mechanical arm, rotation speed controller).

https://www.youtube.com/watch?v=Bov8-HpO10Y

1.21.1-1.6-Beta

Do not want to use the Immersive Engineering mod? Feel free to disable it in CurseForge launcher.
Added KubeJS Block of Raw Ores.
Added KubeJS Raw Ores.