@@ -209,3 +209,4 @@ https://www.youtube.com/watch?v=Bov8-HpO10Y
 Do not want to use the Immersive Engineering mod? Feel free to disable it in CurseForge launcher.
 Added KubeJS Block of Raw Ores.
 Added KubeJS Raw Ores.
+Added KubeJS Raw Tin, Lead, Silver, Nickel, Osmium, Uranium to Andesite Mesh & Gravel Create Sifting Recipe.
